<resources>
    <string name="user_login_url">http://192.168.43.34:8080/user_login</string>
    <string name="user_logout_url">http://192.168.43.34:8080/user_logout</string>
    <string name="create_project_url">http://192.168.43.34:8080/create_project</string>
    <string name="create_user_url">http://192.168.43.34:8080/create_user</string>
    <string name="get_all_projects_url">http://192.168.43.34:8080/get_all_projects</string>
    <string name="get_all_users_url">http://192.168.43.34:8080/get_all_users</string>
    <string name="add_member_to_project_url">http://192.168.43.34:8080/add_member_to_project</string>
    <string name="enable_project_url">http://192.168.43.34:8080/enable_project</string>
    <string name="disable_project_url">http://192.168.43.34:8080/disable_project</string>
    <string name="get_project_users_url">http://192.168.43.34:8080/getUsersBelongToProject</string>
    <string name="remove_users_from_project_url">http://192.168.43.34:8080/removeUsersFromProject</string>
    <string name="update_project_url">http://192.168.43.34:8080/update_project</string>
    <string name="delete_project_url">http://192.168.43.34:8080/delete_project</string>
    <string name="forgot_password_url">http://192.168.43.34:8080/reset_password</string>
    <string name="change_password_url">http://192.168.43.34:8080/change_password_by_token</string>
    <string name="change_password_by_admin_url">http://192.168.43.34:8080/change_password_by_admin</string>
    <string name="delete_user_url">http://192.168.43.34:8080/delete_user</string>
    <string name="create_task_url">http://192.168.43.34:8080/create_task</string>
    <string name="get_all_tasks_url">http://192.168.43.34:8080/get_all_tasks</string>
    <string name="update_task_url">http://192.168.43.34:8080/update_task</string>
    <string name="delete_task_url">http://192.168.43.34:8080/delete_task</string>
    <string name="assign_task_to_user_url">http://192.168.43.34:8080/assign_task_to_user</string>
    <string name="get_task_members_url">http://192.168.43.34:8080/get_task_members</string>
    <string name="remove_task_from_user_url">http://192.168.43.34:8080/remove_task_from_user</string>
    <string name="submit_task_complete_url">http://192.168.43.34:8080/submit_task_complete</string>
    <string name="submit_task_not_complete_url">http://192.168.43.34:8080/submit_task_not_complete</string>
    <string name="add_hours_to_task_url">http://192.168.43.34:8080/add_hours_to_task</string>
    <string name="change_password_by_session_url">http://192.168.43.34:8080/change_password_by_user_session</string>
    <string name="change_email_url">http://192.168.43.34:8080/change_email_by_user_session</string>
    <string name="change_nickname_url">http://192.168.43.34:8080/change_nickname_by_user_session</string>


    <string name="app_name">Team Management</string>
    <string name="prompt_email">Your Email Address</string>
    <string name="prompt_password">Your Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.
    </string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="enter_nickname">Nickname</string>
    <string name="create_user_button">Create User</string>
    <string name="appName">alkamli.fahad.teammanagment</string>
    <string name="project_name">Project Name</string>
    <string name="create_project">Create Project</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="home_title">Welcome </string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="repeat_your_new_password">Repeat Your New Password</string>
    <string name="change_password">Change Password</string>
    <string name="add_task">Add Task</string>
    <string name="completed">Completed</string>
    <string name="done_total_hours">Done Total Hours</string>
    <string name="project_id">Project ID</string>
    <string name="task_end_date">Task End Date</string>
    <string name="task_start_date">Task Start Date</string>
    <string name="task_summary">Task Summary</string>
    <string name="pick_project">pick project</string>
    <string name="enable">Enable</string>
    <string name="make_admin">Make Admin</string>
    <string name="x">X</string>
    <string name="already_have_a_token">Already have a token?</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_token_here">Enter Your Token Here</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="save">Save</string>
    <string name="completed_hours">Completed Hours:</string>
    <string name="fragmentUsersTitle">Users</string>
    <string name="fragmentProjectsTitle">Projects</string>
    <string name="fragmentTasksTitle">Tasks</string>
    <string name="not_a_valid_email">not a valid email</string>
    <string name="login_is_successful">Login is Successful</string>
    <string name="login_was_not_successful">Login was not successful</string>
    <string name="user_creation_was_not_successful">user creation was not successful</string>
    <string name="user_creation_is_successful">user creation is Successful</string>
    <string name="not_authorized">Not Authorized</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_has_been_changed_successfully">Password has been changed successfully</string>
    <string name="request_failed">"Request failed"</string>
    <string name="not_valid_date_message">Only dd/mm/yyyy</string>
    <string name="task_has_been_created">Task has been created</string>
    <string name="task_creation_was_not_Successful">Task creation wasn\'t Successful</string>
    <string name="update_project">Update Project</string>
    <string name="project_creation_was_not_successful">project creation wasn\'t successful</string>
    <string name="project_creation_is_Successful">project creation is Successful</string>
    <string name="project_update_was_not_successful">project update wasn\'t successful</string>
    <string name="project_update_is_Successful">project update is Successful</string>
    <string name="user_has_been_removed_from_the_project_successful">User\/s has been removed from the project Successful</string>
    <string name="Users_could_not_be_removed_from_the_project">User/s couldn\'t be removed from the project</string>
    <string name="task_does_not_exists">Task doesn\'t exists</string>
    <string name="task_has_been_updated">Task has been updated</string>
    <string name="task_could_not_be_updated">Task couldn\'t be updated</string>
    <string name="token_needs_to_be_exactly_6_digits">Token needs to be exactly 6 digits</string>
    <string name="token_has_been_sent_to_your_email">Token has been sent to your email</string>
    <string name="email_does_not_exists">Email doesn\'t exists</string>
    <string name="wrong_token">Wrong Token</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="delete_project">Delete Project</string>
    <string name="disable_project">Disable Project</string>
    <string name="enable_project">Enable Project</string>
    <string name="show_members">Show Members</string>
    <string name="update_details">Update Details</string>
    <string name="add_hours_to_task">Add Hours to Task</string>
    <string name="mark_as_complete">Mark As Complete</string>
    <string name="mark_as_not_complete">Mark As Not Complete</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_members">Task Members</string>
    <string name="add_to_projects">Add To Projects</string>
    <string name="add_to_tasks">Add To Tasks</string>
    <string name="delete_user">Delete User</string>
    <string name="please_enter_a_number">Please enter a number</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hours_need_to_be_more_than_zero">Hours need to be more than zero</string>
    <string name="Users_has_been_removed_from_a_task">User\/s has been removed from a task</string>
    <string name="users_could_not_been_removed_from_a_task">User\/s couldn\'t be removed from a task</string>
    <string name="Task_has_been_deleted">Task has been deleted</string>
    <string name="User_has_been_deleted">User has been deleted</string>
    <string name="User_could_not_been_deleted">User couldn\'t be deleted</string>
    <string name="This_project_is_already_Enabled">This project is already Enabled</string>
    <string name="This_project_is_already_Disabled">This project is already Disabled</string>
    <string name="Project_has_been_deleted">Project has been deleted</string>
    <string name="Could_not_delete_a_project">Couldn\'t delete a project</string>
    <string name="change_email">Change Email</string>
    <string name="change_nickname">Change Nickname</string>
    <string name="password_could_not_be_changed">Password could not be changed.</string>
    <string name="old_password_is_not_correct">Old password is not correct.</string>
    <string name="email_has_been_changed_successfully">Email has been changed successfully.</string>
    <string name="email_could_not_be_changed">Email couldn\'t be changed.</string>
    <string name="password_is_not_correct">Password is not correct.</string>
    <string name="nickname_has_been_changed_successfully">Nickname has been changed successfully</string>
    <string name="nickname_could_not_be_changed">Nickname could not be changed.</string>
    <string name="end_date_should_be_after_the_start_date">End Date should be after the start date</string>


</resources>
