<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_new_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="alkamli.fahad.teammanagment.teammanagment.views.CreateNewTaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:text=""
        android:hint="@string/project_id"
        android:id="@+id/projectId"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content" />

        <Button
            android:text="@string/pick_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchPickProject"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/projectSummary"
        android:hint="@string/task_summary"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/startDate"
        android:hint="@string/task_start_date"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/endDate"
        android:hint="@string/task_end_date"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/doneTotalHours"
        android:gravity="center_vertical|center"
        android:hint="@string/done_total_hours" />

    <CheckBox
        android:text="@string/completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/completedCheckBox"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:text="@string/add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createTask"
        android:layout_marginTop="10dp" />

</LinearLayout>
