<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="alkamli.fahad.teammanagment.teammanagment.views.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/content1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEditText"
            android:hint="@string/email_address"
            android:gravity="center_vertical|center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            tools:ignore="TextFields" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_a_token"
            android:onClick="alreadyHasToken"
            android:textColor="@color/red"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:onClick="askForToken"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/content2"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_your_token_here"
            android:gravity="center_vertical|center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/token"
            android:inputType="number" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_your_new_password"
            android:gravity="center_vertical|center"
            android:layout_marginBottom="10dp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/repeat_your_new_password"
            android:gravity="center_vertical|center"
            android:layout_marginBottom="10dp"
            android:id="@+id/password2"
            android:inputType="textPassword"
            android:maxLines="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:gravity="center_vertical|center_horizontal|center"
            android:layout_gravity="center"
           android:onClick="submitNewPassword"

            />

    </LinearLayout>


    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        />
</LinearLayout>
