<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="alkamli.fahad.teammanagment.teammanagment.views.EditTaskActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/adminContent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_summary"
                android:layout_marginEnd="10dp"

                />
        <EditText
            android:id="@+id/taskSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_summary" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_start_date"
                android:layout_marginEnd="10dp"
                />
        <EditText
            android:id="@+id/taskStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/task_start_date" />
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_end_date"
                android:layout_marginEnd="15dp"

                />
        <EditText
            android:id="@+id/taskEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_end_date"
            android:inputType="date" />

            </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/done_total_hours"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:id="@+id/doneTotalHours"
            android:hint="@string/done_total_hours"
            android:gravity="start" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:text="@string/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />
        <Button
            android:background="@drawable/element_not_enabled"
            android:layout_marginTop="5dp"

            android:layout_marginStart="50dp"
            android:id="@+id/taskCompletedState"
            android:layout_width="30dp"
            android:onClick="changeTaskState"
            android:layout_height="30dp" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="save"
        android:layout_gravity="center" />
</LinearLayout>
