<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="alkamli.fahad.teammanagment.teammanagment.views.UserSettingsActivity">


    <!-- Change password layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/changePasswordLayout"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/enter_password"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/newPassword"
            android:hint="@string/enter_your_new_password"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/newPassword2"
            android:hint="@string/repeat_your_new_password"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:text="@string/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:onClick="changePassword"
            />
    </LinearLayout>

    <!-- Change email layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/changeEmailLayout"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordForEmail"
            android:hint="@string/enter_password"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/enter_email"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />


        <Button
            android:text="@string/change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="changeEmail"
            android:layout_gravity="center"
            android:gravity="center"
            />
        </LinearLayout>


    <!-- Change nickname layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/changeNicknameLayout"
       android:orientation="vertical" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nickname"
            android:hint="@string/enter_nickname"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <Button
            android:text="@string/change_nickname"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="changeNickName"
            android:gravity="center"
            />
    </LinearLayout>

    <!-- buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsLayout"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_gravity="center"
            android:textColor="@color/ItemHeaderColor"
            android:textSize="20sp"
            android:onClick="showChangePassword"
            android:layout_marginBottom="10dp"
            android:gravity="center"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_email"
            android:layout_gravity="center"
            android:onClick="showChangeEmail"
            android:textColor="@color/ItemHeaderColor"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_nickname"
            android:layout_gravity="center"
            android:onClick="showChangeNickname"
            android:textColor="@color/ItemHeaderColor"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>
