<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CreateUserActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fafafa">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/registerContent"
        android:weightSum="1">


        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center"
            android:layout_gravity="center"

            android:textColor="@color/brown"
            android:textColorHint="@color/secondary_text"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/secondary_text"
            android:typeface="serif"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:gravity="center_vertical|center" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_nickname"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:textColorHint="@color/secondary_text"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/brown"
            android:gravity="center_vertical|center" />

        <CheckBox
            android:text="@string/make_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/adminCheckBox"
            android:textColor="@color/brown"
            android:textColorHint="@color/secondary_text"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/registerButton"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_user_button"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@color/black_overlay"
            android:textColor="#880e4f"
            android:longClickable="false"

            android:onClick="createUser"
            android:gravity="center_vertical|center_horizontal|center" />

    </LinearLayout>



    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</RelativeLayout>
